Solve topbar and dash-detail-wrap issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -575,6 +575,11 @@ ul.sidebar-menu li a.active > span{
 	font-weight: 600;
 }
 
+ul.sidebar-menu li a.active > span.sidebar-user{
+	margin-left: 0;
+	font-weight: 600;
+}
+
 .topbar {
   margin-left: 220px;
   height: 55px;
@@ -585,6 +590,8 @@ ul.sidebar-menu li a.active > span{
 
 #dash-detail-wrap{
     width: 100%;
+    position: absolute;
+    top: 55px;
 }
 
 .header-tb{
@@ -594,7 +601,7 @@ ul.sidebar-menu li a.active > span{
 #dash-detail{
 	margin-left: 220px;
 	min-height: calc(100% - 85px);
-  transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 #dash-detail .form-label, #dash-detail .form-input{
